test/Fail/Issue2386-a.err
Issue2386-a.agda:10.1-28: error: [GenericError]
Wrong type of constructor of BUILTIN EQUALITY
when checking the pragma BUILTIN EQUALITY Eq
